# QtDataManager

./: .dockerignore  CMakeLists.txt  CMakeLists.txt.bak  Dockerfile  README.md  dbmanager.cpp  dbmanager.h  docker-compose.yml  main.cpp
controllers/: valuedelegate.cpp  valuedelegate.h
models/: spectablemodel.cpp  spectablemodel.h  treemodel.cpp  treemodel.h  treenode.cpp  treenode.h
tests/: test_dbmanager.cpp  test_treenode.cpp  test_valuedelegate.cpp
views/: mainwindow.cpp  mainwindow.h  mainwindow.ui
